fontconfig: follow Iosevka upstream feature name changes
Ref: https://github.com/be5invis/Iosevka/releases/tag/v31.0.0

Signed-off-by: Coelacanthus <CoelacanthusHex@gmail.com>

--- a/fontconfig/.config/fontconfig/conf.d/47-font-features.conf
+++ b/fontconfig/.config/fontconfig/conf.d/47-font-features.conf
@@ -37,15 +37,46 @@
     </test>
     <edit name="fontfeatures" mode="append">
       <string>ss10 on</string> <!-- using SS10 variant shape -->
-      <string>zero on</string> <!-- slashed zero -->
-      <string>cv49 1</string> <!-- straight y -->
-      <string>cv52 8</string> <!-- better beta -->
-      <string>cv82 5</string> <!-- I like this star -->
-      <string>cv83 2</string> <!-- underline, not too high, not too low -->
-      <string>cv87 1</string> <!-- better curly braces -->
-      <string>cv95 2</string> <!-- better >= -->
-      <string>cv99 1</string> <!-- round dot -->
-      <string>vxdd 1</string> <!-- round dot -->
+      <string>cv01 2</string> <!-- 1 with hat without bottom -->
+      <string>cv02 1</string> <!-- smoother 2 -->
+      <string>cv03 3</string> <!-- smoother 3 -->
+      <string>cv04 5</string> <!-- handwriting style 4, doesn't connect -->
+      <string>cv05 1</string> <!-- smoother 5 -->
+      <string>cv06 3</string> <!-- smoother, handwriting style 6 -->
+      <string>cv07 1</string> <!-- straight 7 -->
+      <string>cv08 1</string> <!-- smoother 8 -->
+      <string>cv09 3</string> <!-- smoother 9 -->
+      <string>cv10 2</string> <!-- slashed zero -->
+      <string>cv26 4</string> <!-- straight, pluged-in Q -->
+      <string>cv41 1</string> <!-- curly, short f -->
+      <string>cv52 2</string> <!-- handwriting style r -->
+      <string>cv54 1</string> <!-- curly t -->
+      <string>cv59 1</string> <!-- straight y -->
+      <string>cv63 23</string> <!-- better beta -->
+      <string>cv73 3</string> <!-- better lambda -->
+      <string>cv76 2</string> <!-- better pi -->
+      <string>VXAG 2</string> <!-- better phi -->
+      <!-- round dot -->
+      <string>VDAA 1</string>
+      <string>VDAB 1</string>
+      <string>VDAC 1</string>
+      <string>VDAD 1</string>
+      <string>VSAA 2</string> <!-- tilde, not too high, not too low -->
+      <string>VSAB 8</string> <!-- mid high hex star -->
+      <string>VSAC 2</string> <!-- underline, not too high, not too low -->
+      <string>VSAE 1</string> <!-- straight back tick -->
+      <string>VSAF 1</string> <!-- straight ASCII quote -->
+      <string>VSAG 1</string> <!-- smoother () -->
+      <string>VSAH 1</string> <!-- better {} -->
+      <string>VSAI 1</string> <!-- straight «» -->
+      <string>VSAJ 2</string> <!-- slant # -->
+      <string>VSAK 1</string> <!-- & -->
+      <string>VSAL 5</string> <!-- @ -->
+      <string>VSAM 2</string> <!-- $ -->
+      <string>VSAO 3</string> <!-- % -->
+      <string>VSAQ 1</string> <!-- smoother ? -->
+      <string>VLAA 2</string> <!-- better >= -->
+      <string>VLAB 2</string> <!-- better != -->
     </edit>
   </match>
   <match target="scan">
@@ -54,15 +85,46 @@
     </test>
     <edit name="fontfeatures" mode="append">
       <string>ss10 on</string> <!-- using SS10 variant shape -->
-      <string>zero on</string> <!-- slashed zero -->
-      <string>cv49 1</string> <!-- straight y -->
-      <string>cv52 8</string> <!-- better beta -->
-      <string>cv82 5</string> <!-- I like this star -->
-      <string>cv83 2</string> <!-- underline, not too high, not too low -->
-      <string>cv87 1</string> <!-- better curly braces -->
-      <string>cv95 2</string> <!-- better >= -->
-      <string>cv99 1</string> <!-- round dot -->
-      <string>vxdd 1</string> <!-- round dot -->
+      <string>cv01 2</string> <!-- 1 with hat without bottom -->
+      <string>cv02 1</string> <!-- smoother 2 -->
+      <string>cv03 3</string> <!-- smoother 3 -->
+      <string>cv04 5</string> <!-- handwriting style 4, doesn't connect -->
+      <string>cv05 1</string> <!-- smoother 5 -->
+      <string>cv06 3</string> <!-- smoother, handwriting style 6 -->
+      <string>cv07 1</string> <!-- straight 7 -->
+      <string>cv08 1</string> <!-- smoother 8 -->
+      <string>cv09 3</string> <!-- smoother 9 -->
+      <string>cv10 2</string> <!-- slashed zero -->
+      <string>cv26 4</string> <!-- straight, pluged-in Q -->
+      <string>cv41 1</string> <!-- curly, short f -->
+      <string>cv52 2</string> <!-- handwriting style r -->
+      <string>cv54 1</string> <!-- curly t -->
+      <string>cv59 1</string> <!-- straight y -->
+      <string>cv63 23</string> <!-- better beta -->
+      <string>cv73 3</string> <!-- better lambda -->
+      <string>cv76 2</string> <!-- better pi -->
+      <string>VXAG 2</string> <!-- better phi -->
+      <!-- round dot -->
+      <string>VDAA 1</string>
+      <string>VDAB 1</string>
+      <string>VDAC 1</string>
+      <string>VDAD 1</string>
+      <string>VSAA 2</string> <!-- tilde, not too high, not too low -->
+      <string>VSAB 8</string> <!-- mid high hex star -->
+      <string>VSAC 2</string> <!-- underline, not too high, not too low -->
+      <string>VSAE 1</string> <!-- straight back tick -->
+      <string>VSAF 1</string> <!-- straight ASCII quote -->
+      <string>VSAG 1</string> <!-- smoother () -->
+      <string>VSAH 1</string> <!-- better {} -->
+      <string>VSAI 1</string> <!-- straight «» -->
+      <string>VSAJ 2</string> <!-- slant # -->
+      <string>VSAK 1</string> <!-- & -->
+      <string>VSAL 5</string> <!-- @ -->
+      <string>VSAM 2</string> <!-- $ -->
+      <string>VSAO 3</string> <!-- % -->
+      <string>VSAQ 1</string> <!-- smoother ? -->
+      <string>VLAA 2</string> <!-- better >= -->
+      <string>VLAB 2</string> <!-- better != -->
     </edit>
   </match>
   <!-- Fira Code -->
