ssh: restructure config
* Switch from gpg A key to FIDO2 ed25519-sk.
* Use Tag mechanism to manage proxy config.
* Replace ControlPath with %C.

Signed-off-by: Coelacanthus <CoelacanthusHex@gmail.com>

--- a/ssh/.ssh/config
+++ b/ssh/.ssh/config
@@ -1,73 +1,8 @@
-Include config.d/*
-
-Host aur aur.archlinux.org
-    IdentityFile ~/.ssh/aur
-    Hostname aur.archlinux.org
-    User aur
-    UserKnownHostsFile ~/.ssh/known_hosts.d/public
-
-Host github.com
-    User git
-    Hostname ssh.github.com
-    Port 443
-    IdentityFile ~/.ssh/06F96A0FB5AD258D.pub
-    ProxyUseFdpass yes
-    # socks5 proxy
-    ProxyCommand nc -F -x localhost:1089 -X 5 %h %p
-    # http proxy
-    #ProxyCommand nc -F -x localhost:8889 -X connect %h %p
-    UserKnownHostsFile ~/.ssh/known_hosts.d/public
-
-Host gitlab.com
-    User git
-    Hostname altssh.gitlab.com
-    Port 443
-    IdentityFile ~/.ssh/06F96A0FB5AD258D.pub
-    ProxyUseFdpass yes
-    # socks5 proxy
-    ProxyCommand nc -F -x localhost:1089 -X 5 %h %p
-    # http proxy
-    #ProxyCommand nc -F -x localhost:8889 -X connect %h %p
-    UserKnownHostsFile ~/.ssh/known_hosts.d/public
-
-Host gitlab.archlinux.org
-    User git
-    Port 222
-    IdentityFile ~/.ssh/06F96A0FB5AD258D.pub
-    ProxyUseFdpass yes
-    # socks5 proxy
-    #ProxyCommand nc -F -x localhost:1089 -X 5 %h %p
-    # http proxy
-    #ProxyCommand nc -F -x localhost:8889 -X connect %h %p
-    UserKnownHostsFile ~/.ssh/known_hosts.d/public
-
-Host codereview.qt-project.org
-    Port 29418
-    User coelacanthus
-    IdentityFile ~/.ssh/06F96A0FB5AD258D.pub
-    PubkeyAcceptedKeyTypes +ssh-rsa
-    MACs hmac-sha2-512-etm@openssh.com,hmac-sha2-256-etm@openssh.com,umac-128-etm@openssh.com,hmac-sha1
-    ProxyUseFdpass yes
-    # socks5 proxy
-    ProxyCommand nc -F -x localhost:1089 -X 5 %h %p
-    # http proxy
-    #ProxyCommand nc -F -x localhost:8889 -X connect %h %p
-    UserKnownHostsFile ~/.ssh/known_hosts.d/public
-
-Host invent.kde.org
-    User git
-    IdentityFile ~/.ssh/06F96A0FB5AD258D.pub
-    UserKnownHostsFile ~/.ssh/known_hosts.d/public
-
-Host archlinuxcn
-    User coelacanthus
-    Hostname build.archlinuxcn.org
-    IdentityFile ~/.ssh/06F96A0FB5AD258D.pub
-    UserKnownHostsFile ~/.ssh/known_hosts.d/public
+Include conf.d/*
 
 Match all
     ControlMaster auto
-    ControlPath ~/.ssh/socket/%h-%p-%r
+    ControlPath ~/.ssh/socket/%C
     ControlPersist 4h
     # Keep Alive
     ServerAliveInterval 120
@@ -77,10 +12,11 @@ Match all
     VerifyHostKeyDNS yes
     # I will only trust server that I verify manually or via SSHFP+DNSSEC
     StrictHostKeyChecking yes
-    # https://infosec.mozilla.org/guidelines/openssh.html#modern
-    # https://www.ssh-audit.com/hardening_guides.html
-    # Ensure KnownHosts are unreadable if leaked - it is otherwise easier to know which hosts your keys have access to.
-    HashKnownHosts yes
+    # This points to the manually managed "known hosts" file.
+    GlobalKnownHostsFile ~/.ssh/known_hosts.d/public ~/.ssh/known_hosts.d/local ~/.ssh/known_hosts.d/archriscv
+    # This disables the default behaviour of writing to a local
+    # ~/.ssh/known_hosts file.
+    UserKnownHostsFile /dev/null
     Ciphers -aes256-cbc,aes192-cbc,aes128-cbc,3des-cbc
     MACs -hmac-sha1,hmac-sha1-96,hmac-sha2-256,hmac-sha2-512,hmac-md5,hmac-md5-96,umac-64@openssh.com,umac-128@openssh.com,hmac-sha1-etm@openssh.com,hmac-sha1-96-etm@openssh.com,hmac-md5-etm@openssh.com,hmac-md5-96-etm@openssh.com,umac-64-etm@openssh.com
     KexAlgorithms -ecdh-sha2-nistp256,ecdh-sha2-nistp384,ecdh-sha2-nistp521,diffie-hellman-group1-sha1,diffie-hellman-group14-sha1,diffie-hellman-group14-sha256,diffie-hellman-group-exchange-sha256
@@ -89,9 +25,7 @@ Match all
     Protocol 2
     # Pass Environment variable to server
     SendEnv COLORTERM
+    IdentityFile ~/.ssh/yubikey-0-14248439
 
-# https://wiki.archlinux.org/title/GnuPG#Configure_pinentry_to_use_the_correct_TTY
-Match host * exec "gpg-connect-agent UPDATESTARTUPTTY /bye"
-    
 # vim: sts=4 et:
 # kate: space-indent on; indent-width 4;
