sysctl(perf): follow new advice of cloudflare
https://blog.cloudflare.com/optimizing-tcp-for-high-throughput-and-low-latency/

Signed-off-by: Coelacanthus <CoelacanthusHex@gmail.com>

--- a/sysctl/99-perf.conf
+++ b/sysctl/99-perf.conf
@@ -33,10 +33,10 @@ fs.inotify.max_user_watches = 524288
 net.core.netdev_max_backlog = 250000
 
 # increase TCP max buffer size setable using setsockopt()
-net.core.rmem_max = 16777216
-net.core.wmem_max = 16777216
 net.core.rmem_default = 8388608
 net.core.wmem_default = 8388608
+net.core.rmem_max = 536870912
+net.core.wmem_max = 536870912
 net.core.optmem_max = 65536
 
 # queue disciplines
@@ -72,7 +72,7 @@ net.ipv4.ip_local_port_range = 4096 65535
 # but SACK is commonly exploited and rarely used
 net.ipv4.tcp_sack = 1
 net.ipv4.tcp_dsack = 1
-
+net.ipv4.tcp_fack = 1
 
 # SSR could impact TCP's performance on a fixed-speed network (e.g., wired)
 #   but it could be helpful on a variable-speed network (e.g., LTE)
@@ -80,5 +80,12 @@ net.ipv4.tcp_dsack = 1
 net.ipv4.tcp_slow_start_after_idle = 0
 
 # increase memory thresholds to prevent packet dropping
-net.ipv4.tcp_rmem = 16384 262144 8388608
-net.ipv4.tcp_wmem = 32768 524288 16777216
+# the maximum buffer size is 536870912 bytes (512 MiB)
+net.ipv4.tcp_rmem = 8192 262144 536870912
+net.ipv4.tcp_wmem = 4096 16384 536870912
+# reduce the maximum window size to 128 MiB to reduce TCP receive queue collapse
+#   (see https://blog.cloudflare.com/optimizing-tcp-for-high-throughput-and-low-latency)
+net.ipv4.tcp_adv_win_scale = -2
+net.ipv4.tcp_collapse_max_bytes = 6291456
+# limit the size of unsent bytes in the write queue to prevent bufferbloat
+net.ipv4.tcp_notsent_lowat = 131072
