--- a/fontconfig/.config/fontconfig/conf.d/49-replace-latin.conf
+++ b/fontconfig/.config/fontconfig/conf.d/49-replace-latin.conf
@@ -16,6 +16,38 @@
     </prefer>
   </alias>
 
+  <!-- Replace Web Safe Fonts and PDF Safe Fonts -->
+  <alias binding="same">
+    <family>Arial</family>
+    <prefer>
+      <family>sans-serif</family>
+    </prefer>
+  </alias>
+  <alias binding="same">
+    <family>Helvetica</family>
+    <prefer>
+      <family>sans-serif</family>
+    </prefer>
+  </alias>
+  <alias binding="same">
+    <family>Times</family>
+    <prefer>
+      <family>serif</family>
+    </prefer>
+  </alias>
+  <alias binding="same">
+    <family>Courier</family>
+    <prefer>
+      <family>Iosevka Term</family>
+    </prefer>
+  </alias>
+  <alias binding="same">
+    <family>Courier New</family>
+    <prefer>
+      <family>Iosevka Term</family>
+    </prefer>
+  </alias>
+
   <!-- GNOME Dev like it, but I don't. -->
   <alias binding="same">
     <family>Cantarell</family>
