--- a/git/.config/git/sendmail.config
+++ b/git/.config/git/sendmail.config
@@ -1,5 +1,9 @@
 [sendemail]
-    identity = gmail
+    identity = fastmail
+[sendemail.fastmail]
+    smtpServer = /usr/bin/sendmail
+    smtpServerOption = -a
+    smtpServerOption = fastmail
 [sendemail.gmail]
     smtpServer = /usr/bin/sendmail
     smtpServerOption = -a
