--- a/git/.config/git/archlinux.config
+++ b/git/.config/git/archlinux.config
@@ -1,5 +1,5 @@
 [user]
-    email = CoelacanthusHex@gmail.com
+    email = uwu@coelacanthus.name
     name = Celeste Liu
 
 # vim: set ft=gitconfig et:
