--- a/git/.config/git/qt.config
+++ b/git/.config/git/qt.config
@@ -1,5 +1,5 @@
 [user]
-    email = CoelacanthusHex@gmail.com
+    email = uwu@coelacanthus.name
     name = Celeste Liu
     signingkey = E35C89E45867AE35
 
