ssh: move some config to local config

--- a/ssh/.ssh/config
+++ b/ssh/.ssh/config
@@ -1,3 +1,4 @@
+Include local.pre
 Include conf.d/*
 
 Match all
@@ -25,7 +26,8 @@ Match all
     Protocol 2
     # Pass Environment variable to server
     SendEnv COLORTERM
-    IdentityFile ~/.ssh/yubikey-0-14248439
+
+Include local.post
 
 # vim: sts=4 et:
 # kate: space-indent on; indent-width 4;
