fontconfig: use COLR version of Twemoji
Qt have supported COLR fonts, see comment.

--- a/fontconfig/.config/fontconfig/conf.d/50-generic.conf
+++ b/fontconfig/.config/fontconfig/conf.d/50-generic.conf
@@ -19,8 +19,8 @@
       <string>Jigmo</string>
       <string>Jigmo2</string>
       <string>Jigmo3</string>
-      <string>Twemoji</string>
       <string>Twemoji Mozilla</string>
+      <string>Twemoji</string>
       <string>Blobmoji</string>
       <string>Noto Color Emoji</string>
       <string>Noto Emoji</string>
@@ -43,8 +43,8 @@
       <string>Jigmo3</string>
       <string>Plangothic P1</string>
       <string>Plangothic P2</string>
-      <string>Twemoji</string>
       <string>Twemoji Mozilla</string>
+      <string>Twemoji</string>
       <string>Blobmoji</string>
       <string>Noto Color Emoji</string>
     </edit>
@@ -68,8 +68,8 @@
       <string>Jigmo</string>
       <string>Jigmo2</string>
       <string>Jigmo3</string>
-      <string>Twemoji</string>
       <string>Twemoji Mozilla</string>
+      <string>Twemoji</string>
       <string>Blobmoji</string>
       <string>Noto Color Emoji</string>
     </edit>
@@ -80,10 +80,10 @@
     </test>
     <edit binding="strong" mode="prepend" name="family">
       <!--
-        Use bitmap Twemoji font for Qt and GTK seems no support for COLRv1.
+        Waiting for https://codereview.qt-project.org/c/qt/qtbase/+/609056
       -->
-      <string>Twemoji</string>
       <string>Twemoji Mozilla</string>
+      <string>Twemoji</string>
       <string>Blobmoji</string>
       <string>Noto Color Emoji</string>
     </edit>
@@ -102,8 +102,8 @@
       <string>Jigmo</string>
       <string>Jigmo2</string>
       <string>Jigmo3</string>
-      <string>Twemoji</string>
       <string>Twemoji Mozilla</string>
+      <string>Twemoji</string>
       <string>Blobmoji</string>
       <string>Noto Color Emoji</string>
       <string>Noto Emoji</string>
