fontconfig,konsole: switch to customize build Iosevka
fontfeatures in fontconfig leak support, especially in Qt.

--- a/fontconfig/.config/fontconfig/conf.d/49-replace-latin.conf
+++ b/fontconfig/.config/fontconfig/conf.d/49-replace-latin.conf
@@ -38,13 +38,13 @@
   <alias binding="same">
     <family>Courier</family>
     <prefer>
-      <family>Iosevka Term</family>
+      <family>Iosevka Coelacanthus</family>
     </prefer>
   </alias>
   <alias binding="same">
     <family>Courier New</family>
     <prefer>
-      <family>Iosevka Term</family>
+      <family>Iosevka Coelacanthus</family>
     </prefer>
   </alias>
 
