--- a/fontconfig/.config/fontconfig/conf.d/50-generic.conf
+++ b/fontconfig/.config/fontconfig/conf.d/50-generic.conf
@@ -55,7 +55,8 @@
       <string>monospace</string>
     </test>
     <edit binding="strong" mode="prepend" name="family">
-      <string>Iosevka Term</string>
+      <string>Iosevka Coelacanthus</string>
+      <string>Iosevka</string>
       <string>Maple Mono</string>
       <string>Fira Code</string>
       <!-- Use SC variant to use it with unknown lang like en-* zh-Hans-* and zh-cmn -->
