fontconfig: use Merriweather as serif font
Upstream: https://github.com/EbenSorkin/Merriweather4.git

Signed-off-by: Coelacanthus <uwu@coelacanthus.name>

--- a/fontconfig/.config/fontconfig/conf.d/50-generic.conf
+++ b/fontconfig/.config/fontconfig/conf.d/50-generic.conf
@@ -32,6 +32,7 @@
       <string>serif</string>
     </test>
     <edit binding="strong" mode="prepend" name="family">
+      <string>Merriweather</string>
       <string>Noto Serif</string>
       <!-- Use SC variant to use it with unknown lang like en-* zh-Hans-* and zh-cmn -->
       <string>Noto Serif CJK SC</string>
