fontconfig: add more generic family
https://drafts.csswg.org/css-fonts/#generic-font-families

Signed-off-by: Coelacanthus <uwu@coelacanthus.name>

--- a/fontconfig/.config/fontconfig/conf.d/50-generic.conf
+++ b/fontconfig/.config/fontconfig/conf.d/50-generic.conf
@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <!DOCTYPE fontconfig SYSTEM "urn:fontconfig:fonts.dtd">
-<!-- Configs based on https://sh.alynx.one/posts/Fontconfig-NotoColorEmoji-Antialias/local.conf -->
+<!-- See https://drafts.csswg.org/css-fonts/#generic-font-families -->
 <fontconfig>
   <!-- Default sans-serif font -->
   <match target="pattern">
@@ -24,6 +24,30 @@
       <string>Blobmoji</string>
       <string>Noto Color Emoji</string>
       <string>Noto Emoji</string>
+    </edit>
+  </match>
+  <!-- Default math fonts -->
+  <!-- SHALL before serif config to make fallback work. -->
+  <!--
+    Firefox still doesn't support math generic family.
+    https://bugzilla.mozilla.org/show_bug.cgi?id=1788937
+    https://caniuse.com/mdn-css_properties_font-family_math
+    Remove font.name-list.serif.x-math in user.js and about:config when it was implemented.
+  -->
+  <!--
+    SHOULD NOT use STIXGeneral here. It's obsolete.
+    https://bugzilla.mozilla.org/show_bug.cgi?id=1336058
+  -->
+  <match target="pattern">
+    <test qual="any" name="family">
+      <string>math</string>
+    </test>
+    <edit binding="strong" mode="prepend" name="family">
+      <string>Concrete Math</string>
+      <string>Latin Modern Math</string>
+      <string>STIX Two Math</string>
+      <string>Libertinus Math</string>
+      <string>serif</string>
     </edit>
   </match>
   <!-- Default serif fonts -->
@@ -76,25 +100,105 @@
       <string>Noto Color Emoji</string>
     </edit>
   </match>
+  <!-- Default emoji fonts -->
   <match target="pattern">
     <test qual="any" name="family">
       <string>emoji</string>
     </test>
     <edit binding="strong" mode="prepend" name="family">
-      <!--
-        Waiting for https://codereview.qt-project.org/c/qt/qtbase/+/609056
-      -->
       <string>Twemoji Mozilla</string>
       <string>Twemoji</string>
       <string>Blobmoji</string>
       <string>Noto Color Emoji</string>
     </edit>
   </match>
+  <!-- Default cursive fonts -->
   <match target="pattern">
     <test qual="any" name="family">
       <string>cursive</string>
     </test>
     <edit binding="strong" mode="prepend" name="family">
+      <string>LXGW WenKai</string>
+      <!-- 补全生僻字 -->
+      <string>Plangothic P1</string>
+      <string>Plangothic P2</string>
+      <family>NazonoMincho</family>
+      <family>NazonoMincho+</family>
+      <string>Jigmo</string>
+      <string>Jigmo2</string>
+      <string>Jigmo3</string>
+      <string>Twemoji Mozilla</string>
+      <string>Twemoji</string>
+      <string>Blobmoji</string>
+      <string>Noto Color Emoji</string>
+      <string>Noto Emoji</string>
+    </edit>
+  </match>
+  <!-- Default fantasy fonts -->
+  <match target="pattern">
+    <test qual="any" name="family">
+      <string>fantasy</string>
+    </test>
+    <edit binding="strong" mode="prepend" name="family">
+      <!-- FIXME: May be renamed in future. -->
+      <string>Child Fun Sans Demo</string>
+      <string>LXGW WenKai</string>
+      <!-- 补全生僻字 -->
+      <string>Plangothic P1</string>
+      <string>Plangothic P2</string>
+      <family>NazonoMincho</family>
+      <family>NazonoMincho+</family>
+      <string>Jigmo</string>
+      <string>Jigmo2</string>
+      <string>Jigmo3</string>
+      <string>Twemoji Mozilla</string>
+      <string>Twemoji</string>
+      <string>Blobmoji</string>
+      <string>Noto Color Emoji</string>
+      <string>Noto Emoji</string>
+    </edit>
+  </match>
+  <!-- Default generic(fangsong) fonts -->
+  <!-- Backward compatible -->
+  <alias binding="strong">
+    <family>fangsong</family>
+    <accept>
+      <family>generic(fangsong)</family>
+    </accept>
+  </alias>
+  <match target="pattern">
+    <test qual="any" name="family">
+      <string>generic(fangsong)</string>
+    </test>
+    <edit binding="strong" mode="prepend" name="family">
+      <!-- 方正恒仿宋 GBK -->
+      <string>FZHengFangSongJF</string>
+      <string>方正仿宋_GB18030</string>
+      <!-- 补全生僻字 -->
+      <string>Plangothic P1</string>
+      <string>Plangothic P2</string>
+      <family>NazonoMincho</family>
+      <family>NazonoMincho+</family>
+      <string>Jigmo</string>
+      <string>Jigmo2</string>
+      <string>Jigmo3</string>
+      <string>Twemoji Mozilla</string>
+      <string>Twemoji</string>
+      <string>Blobmoji</string>
+      <string>Noto Color Emoji</string>
+      <string>Noto Emoji</string>
+    </edit>
+  </match>
+  <!-- Default generic(kai) fonts -->
+  <match target="pattern">
+    <test qual="any" name="family">
+      <string>generic(kai)</string>
+    </test>
+    <edit binding="strong" mode="prepend" name="family">
+      <family>方正萤雪简体</family>
+      <family>方正萤雪繁体</family>
+      <family>方正新楷体_GBK</family>
+      <family>方正楷体_GB18030</family>
       <string>LXGW WenKai</string>
       <!-- 补全生僻字 -->
       <string>Plangothic P1</string>
