--- a/fontconfig/.config/fontconfig/conf.d/49-replace-zh-cn-others.conf
+++ b/fontconfig/.config/fontconfig/conf.d/49-replace-zh-cn-others.conf
@@ -30,22 +30,19 @@
   <alias binding="same">
     <family>楷体_GB2312</family>
     <accept>
-      <family>方正萤雪简体</family>
-      <family>方正萤雪繁体</family>
-      <family>方正新楷体_GBK</family>
+      <family>generic(kai)</family>
     </accept>
   </alias>
   <alias binding="same">
     <family>KaiTi_GB2312</family>
     <accept>
-      <family>方正萤雪简体</family>
-      <family>方正萤雪繁体</family>
-      <family>方正新楷体_GBK</family>
+      <family>generic(kai)</family>
     </accept>
   </alias>
   <alias binding="same">
     <family>标楷体</family>
     <accept>
+      <!-- FIXME: add substitute for generic(kai) with lang=zh-TW/HK to use generic(kai) here. -->
       <family>方正萤雪繁体</family>
       <family>方正萤雪简体</family>
       <family>方正新楷体_GBK</family>
@@ -76,16 +73,14 @@
   <alias binding="same">
     <family>仿宋_GB2312</family>
     <accept>
-      <family>方正刻本仿宋简体</family>
-      <family>方正仿宋_GBK</family>
-     </accept>
+      <family>generic(fangsong)</family>
+    </accept>
   </alias>
   <alias binding="same">
     <family>FangSong_GB2312</family>
     <accept>
-      <family>方正刻本仿宋简体</family>
-      <family>方正仿宋_GBK</family>
-     </accept>
+      <family>generic(fangsong)</family>
+    </accept>
   </alias>
   <!-- }}} -->
 </fontconfig>
