fontconfig: simplify generic family config with <alias>
Signed-off-by: Coelacanthus <uwu@coelacanthus.name>

--- a/fontconfig/.config/fontconfig/conf.d/50-generic.conf
+++ b/fontconfig/.config/fontconfig/conf.d/50-generic.conf
@@ -3,29 +3,27 @@
 <!-- See https://drafts.csswg.org/css-fonts/#generic-font-families -->
 <fontconfig>
   <!-- Default sans-serif font -->
-  <match target="pattern">
-    <test qual="any" name="family">
-      <string>sans-serif</string>
-    </test>
-    <edit binding="strong" mode="prepend" name="family">
-      <string>Andika</string>
+  <alias binding="strong">
+    <family>sans-serif</family>
+    <prefer>
+      <family>Andika</family>
       <!-- Use SC variant to use it with unknown lang like en-* zh-Hans-* and zh-cmn -->
-      <string>Noto Sans CJK SC</string>
+      <family>Noto Sans CJK SC</family>
       <!-- 补全生僻字 -->
-      <string>Plangothic P1</string>
-      <string>Plangothic P2</string>
+      <family>Plangothic P1</family>
+      <family>Plangothic P2</family>
       <family>NazonoMincho</family>
       <family>NazonoMincho+</family>
-      <string>Jigmo</string>
-      <string>Jigmo2</string>
-      <string>Jigmo3</string>
-      <string>Twemoji Mozilla</string>
-      <string>Twemoji</string>
-      <string>Blobmoji</string>
-      <string>Noto Color Emoji</string>
-      <string>Noto Emoji</string>
-    </edit>
-  </match>
+      <family>Jigmo</family>
+      <family>Jigmo2</family>
+      <family>Jigmo3</family>
+      <family>Twemoji Mozilla</family>
+      <family>Twemoji</family>
+      <family>Blobmoji</family>
+      <family>Noto Color Emoji</family>
+      <family>Noto Emoji</family>
+    </prefer>
+  </alias>
   <!-- Default math fonts -->
   <!-- SHALL before serif config to make fallback work. -->
   <!--
@@ -38,183 +36,167 @@
     SHOULD NOT use STIXGeneral here. It's obsolete.
     https://bugzilla.mozilla.org/show_bug.cgi?id=1336058
   -->
-  <match target="pattern">
-    <test qual="any" name="family">
-      <string>math</string>
-    </test>
-    <edit binding="strong" mode="prepend" name="family">
-      <string>Concrete Math</string>
-      <string>Latin Modern Math</string>
-      <string>STIX Two Math</string>
-      <string>Libertinus Math</string>
-      <string>serif</string>
-    </edit>
-  </match>
+  <alias binding="strong">
+    <family>math</family>
+    <prefer>
+      <family>Concrete Math</family>
+      <family>Latin Modern Math</family>
+      <family>STIX Two Math</family>
+      <family>Libertinus Math</family>
+      <family>serif</family>
+    </prefer>
+  </alias>
   <!-- Default serif fonts -->
-  <match target="pattern">
-    <test qual="any" name="family">
-      <string>serif</string>
-    </test>
-    <edit binding="strong" mode="prepend" name="family">
-      <string>Merriweather</string>
-      <string>Noto Serif</string>
+  <alias binding="strong">
+    <family>serif</family>
+    <prefer>
+      <family>Merriweather</family>
+      <family>Noto Serif</family>
       <!-- Use SC variant to use it with unknown lang like en-* zh-Hans-* and zh-cmn -->
-      <string>Noto Serif CJK SC</string>
+      <family>Noto Serif CJK SC</family>
       <!-- 补全生僻字 -->
       <family>NazonoMincho</family>
       <family>NazonoMincho+</family>
-      <string>Jigmo</string>
-      <string>Jigmo2</string>
-      <string>Jigmo3</string>
-      <string>Plangothic P1</string>
-      <string>Plangothic P2</string>
-      <string>Twemoji Mozilla</string>
-      <string>Twemoji</string>
-      <string>Blobmoji</string>
-      <string>Noto Color Emoji</string>
-    </edit>
-  </match>
+      <family>Jigmo</family>
+      <family>Jigmo2</family>
+      <family>Jigmo3</family>
+      <family>Plangothic P1</family>
+      <family>Plangothic P2</family>
+      <family>Twemoji Mozilla</family>
+      <family>Twemoji</family>
+      <family>Blobmoji</family>
+      <family>Noto Color Emoji</family>
+    </prefer>
+  </alias>
   <!-- Default monospace fonts -->
-  <match target="pattern">
-    <test qual="any" name="family">
-      <string>monospace</string>
-    </test>
-    <edit binding="strong" mode="prepend" name="family">
-      <string>Iosevka Coelacanthus</string>
-      <string>Iosevka</string>
-      <string>Maple Mono</string>
-      <string>Fira Code</string>
+  <alias binding="strong">
+    <family>monospace</family>
+    <prefer>
+      <family>Iosevka Coelacanthus</family>
+      <family>Iosevka</family>
+      <family>Maple Mono</family>
+      <family>Fira Code</family>
       <!-- Use SC variant to use it with unknown lang like en-* zh-Hans-* and zh-cmn -->
-      <string>Noto Sans CJK SC</string>
+      <family>Noto Sans CJK SC</family>
       <!-- 补全生僻字 -->
-      <string>Plangothic P1</string>
-      <string>Plangothic P2</string>
+      <family>Plangothic P1</family>
+      <family>Plangothic P2</family>
       <family>NazonoMincho</family>
       <family>NazonoMincho+</family>
-      <string>Jigmo</string>
-      <string>Jigmo2</string>
-      <string>Jigmo3</string>
-      <string>Twemoji Mozilla</string>
-      <string>Twemoji</string>
-      <string>Blobmoji</string>
-      <string>Noto Color Emoji</string>
-    </edit>
-  </match>
+      <family>Jigmo</family>
+      <family>Jigmo2</family>
+      <family>Jigmo3</family>
+      <family>Twemoji Mozilla</family>
+      <family>Twemoji</family>
+      <family>Blobmoji</family>
+      <family>Noto Color Emoji</family>
+    </prefer>
+  </alias>
   <!-- Default emoji fonts -->
-  <match target="pattern">
-    <test qual="any" name="family">
-      <string>emoji</string>
-    </test>
-    <edit binding="strong" mode="prepend" name="family">
-      <string>Twemoji Mozilla</string>
-      <string>Twemoji</string>
-      <string>Blobmoji</string>
-      <string>Noto Color Emoji</string>
-    </edit>
-  </match>
+  <alias binding="strong">
+    <family>emoji</family>
+    <prefer>
+      <family>Twemoji Mozilla</family>
+      <family>Twemoji</family>
+      <family>Blobmoji</family>
+      <family>Noto Color Emoji</family>
+    </prefer>
+  </alias>
   <!-- Default cursive fonts -->
-  <match target="pattern">
-    <test qual="any" name="family">
-      <string>cursive</string>
-    </test>
-    <edit binding="strong" mode="prepend" name="family">
-      <string>LXGW WenKai</string>
+  <alias binding="strong">
+    <family>cursive</family>
+    <prefer>
+      <family>LXGW WenKai</family>
       <!-- 补全生僻字 -->
-      <string>Plangothic P1</string>
-      <string>Plangothic P2</string>
+      <family>Plangothic P1</family>
+      <family>Plangothic P2</family>
       <family>NazonoMincho</family>
       <family>NazonoMincho+</family>
-      <string>Jigmo</string>
-      <string>Jigmo2</string>
-      <string>Jigmo3</string>
-      <string>Twemoji Mozilla</string>
-      <string>Twemoji</string>
-      <string>Blobmoji</string>
-      <string>Noto Color Emoji</string>
-      <string>Noto Emoji</string>
-    </edit>
-  </match>
+      <family>Jigmo</family>
+      <family>Jigmo2</family>
+      <family>Jigmo3</family>
+      <family>Twemoji Mozilla</family>
+      <family>Twemoji</family>
+      <family>Blobmoji</family>
+      <family>Noto Color Emoji</family>
+      <family>Noto Emoji</family>
+    </prefer>
+  </alias>
   <!-- Default fantasy fonts -->
-  <match target="pattern">
-    <test qual="any" name="family">
-      <string>fantasy</string>
-    </test>
-    <edit binding="strong" mode="prepend" name="family">
+  <alias binding="strong">
+    <family>fantasy</family>
+    <prefer>
       <!-- FIXME: May be renamed in future. -->
-      <string>Child Fun Sans Demo</string>
-      <string>LXGW WenKai</string>
+      <family>Child Fun Sans Demo</family>
+      <family>LXGW WenKai</family>
       <!-- 补全生僻字 -->
-      <string>Plangothic P1</string>
-      <string>Plangothic P2</string>
+      <family>Plangothic P1</family>
+      <family>Plangothic P2</family>
       <family>NazonoMincho</family>
       <family>NazonoMincho+</family>
-      <string>Jigmo</string>
-      <string>Jigmo2</string>
-      <string>Jigmo3</string>
-      <string>Twemoji Mozilla</string>
-      <string>Twemoji</string>
-      <string>Blobmoji</string>
-      <string>Noto Color Emoji</string>
-      <string>Noto Emoji</string>
-    </edit>
-  </match>
+      <family>Jigmo</family>
+      <family>Jigmo2</family>
+      <family>Jigmo3</family>
+      <family>Twemoji Mozilla</family>
+      <family>Twemoji</family>
+      <family>Blobmoji</family>
+      <family>Noto Color Emoji</family>
+      <family>Noto Emoji</family>
+    </prefer>
+  </alias>
   <!-- Default generic(fangsong) fonts -->
   <!-- Backward compatible -->
   <alias binding="strong">
     <family>fangsong</family>
-    <accept>
+    <prefer>
       <family>generic(fangsong)</family>
-    </accept>
+    </prefer>
   </alias>
-  <match target="pattern">
-    <test qual="any" name="family">
-      <string>generic(fangsong)</string>
-    </test>
-    <edit binding="strong" mode="prepend" name="family">
+  <alias binding="strong">
+    <family>generic(fangsong)</family>
+    <prefer>
       <!-- 方正恒仿宋 GBK -->
-      <string>FZHengFangSongJF</string>
-      <string>方正仿宋_GB18030</string>
+      <family>FZHengFangSongJF</family>
+      <family>方正仿宋_GB18030</family>
       <!-- 补全生僻字 -->
-      <string>Plangothic P1</string>
-      <string>Plangothic P2</string>
+      <family>Plangothic P1</family>
+      <family>Plangothic P2</family>
       <family>NazonoMincho</family>
       <family>NazonoMincho+</family>
-      <string>Jigmo</string>
-      <string>Jigmo2</string>
-      <string>Jigmo3</string>
-      <string>Twemoji Mozilla</string>
-      <string>Twemoji</string>
-      <string>Blobmoji</string>
-      <string>Noto Color Emoji</string>
-      <string>Noto Emoji</string>
-    </edit>
-  </match>
+      <family>Jigmo</family>
+      <family>Jigmo2</family>
+      <family>Jigmo3</family>
+      <family>Twemoji Mozilla</family>
+      <family>Twemoji</family>
+      <family>Blobmoji</family>
+      <family>Noto Color Emoji</family>
+      <family>Noto Emoji</family>
+    </prefer>
+  </alias>
   <!-- Default generic(kai) fonts -->
-  <match target="pattern">
-    <test qual="any" name="family">
-      <string>generic(kai)</string>
-    </test>
-    <edit binding="strong" mode="prepend" name="family">
+  <alias binding="strong">
+    <family>generic(kai)</family>
+    <prefer>
       <family>方正萤雪简体</family>
       <family>方正萤雪繁体</family>
       <family>方正新楷体_GBK</family>
       <family>方正楷体_GB18030</family>
-      <string>LXGW WenKai</string>
+      <family>LXGW WenKai</family>
       <!-- 补全生僻字 -->
-      <string>Plangothic P1</string>
-      <string>Plangothic P2</string>
+      <family>Plangothic P1</family>
+      <family>Plangothic P2</family>
       <family>NazonoMincho</family>
       <family>NazonoMincho+</family>
-      <string>Jigmo</string>
-      <string>Jigmo2</string>
-      <string>Jigmo3</string>
-      <string>Twemoji Mozilla</string>
-      <string>Twemoji</string>
-      <string>Blobmoji</string>
-      <string>Noto Color Emoji</string>
-      <string>Noto Emoji</string>
-    </edit>
-  </match>
+      <family>Jigmo</family>
+      <family>Jigmo2</family>
+      <family>Jigmo3</family>
+      <family>Twemoji Mozilla</family>
+      <family>Twemoji</family>
+      <family>Blobmoji</family>
+      <family>Noto Color Emoji</family>
+      <family>Noto Emoji</family>
+    </prefer>
+  </alias>
 </fontconfig>
 <!-- vim: set nu sts=2 sw=2 et: -->
 <!-- kate: space-indent on; indent-width 2; syntax xml; -->
