fontconfig: add LXGW Wenkai TC/KR as fallback of LXGW Wenkai
Signed-off-by: Coelacanthus <uwu@coelacanthus.name>

--- a/fontconfig/.config/fontconfig/conf.d/50-generic.conf
+++ b/fontconfig/.config/fontconfig/conf.d/50-generic.conf
@@ -29,6 +29,8 @@
     <family>cursive</family>
     <prefer>
       <family>LXGW WenKai</family>
+      <family>LXGW WenKai TC</family>
+      <family>LXGW WenKai KR</family>
       <family>serif</family>
     </prefer>
   </alias>
@@ -39,6 +41,8 @@
       <!-- FIXME: May be renamed in future. -->
       <family>Child Fun Sans Demo</family>
       <family>LXGW WenKai</family>
+      <family>LXGW WenKai TC</family>
+      <family>LXGW WenKai KR</family>
       <family>sans-serif</family>
     </prefer>
   </alias>
@@ -68,6 +72,8 @@
       <family>方正新楷体_GBK</family>
       <family>方正楷体_GB18030</family>
       <family>LXGW WenKai</family>
+      <family>LXGW WenKai TC</family>
+      <family>LXGW WenKai KR</family>
       <family>sans-serif</family>
     </prefer>
   </alias>
