fontconfig: use New Computer Modern Math instead Latin Modern Math
NCM Math has reached the same level as STIX Two Math for unicode-math at 2023-08-13.
See http://mirrors.ctan.org/macros/unicodetex/latex/unicode-math/unimath-symbols.pdf
Other characters support fall a bit (4605/4148).

Signed-off-by: Coelacanthus <uwu@coelacanthus.name>

--- a/fontconfig/.config/fontconfig/conf.d/50-generic.conf
+++ b/fontconfig/.config/fontconfig/conf.d/50-generic.conf
@@ -8,7 +8,8 @@
     Firefox still doesn't support math generic family.
     https://bugzilla.mozilla.org/show_bug.cgi?id=1788937
     https://caniuse.com/mdn-css_properties_font-family_math
-    Remove font.name-list.serif.x-math in user.js and about:config when it was implemented.
+    Remove font.name.serif.x-math = "math" in user.js and about:config
+    when Firefox set font.name-list.serif.x-math to "math, ..." or remove it.
   -->
   <!--
     SHOULD NOT use STIXGeneral here. It's obsolete.
@@ -18,7 +19,7 @@
     <family>math</family>
     <prefer>
       <family>Concrete Math</family>
-      <family>Latin Modern Math</family>
+      <family>NewComputerModernMath</family>
       <family>STIX Two Math</family>
       <family>Libertinus Math</family>
       <family>serif</family>
