fontconfig: add comments for script of BCP 47
See https://bugzilla.mozilla.org/show_bug.cgi?id=739861
and https://bugzilla.mozilla.org/show_bug.cgi?id=556237
and https://bugzilla.mozilla.org/show_bug.cgi?id=1919527

Signed-off-by: Coelacanthus <uwu@coelacanthus.name>

--- a/fontconfig/.config/fontconfig/conf.d/54-source-han-lang-attr-fix.conf
+++ b/fontconfig/.config/fontconfig/conf.d/54-source-han-lang-attr-fix.conf
@@ -4,6 +4,12 @@
   <description>修复思源字体不支持部分 lang attribute 的问题</description>
 
   <!-- Workaround for Source Han Sans/Serif has no support for zh-Hant -->
+  <!--
+    FIXME: That may be an issue of Firefox,
+    see https://bugzilla.mozilla.org/show_bug.cgi?id=739861
+    and https://bugzilla.mozilla.org/show_bug.cgi?id=556237
+    and https://bugzilla.mozilla.org/show_bug.cgi?id=1919527
+  -->
   <match target="pattern">
     <test name="lang">
       <string>zh-Hant-TW</string>
