fontconfig: Child Fun Sans has released
Signed-off-by: Coelacanthus <uwu@coelacanthus.name>

--- a/fontconfig/.config/fontconfig/conf.d/50-generic.conf
+++ b/fontconfig/.config/fontconfig/conf.d/50-generic.conf
@@ -39,8 +39,7 @@
   <alias binding="strong">
     <family>fantasy</family>
     <prefer>
-      <!-- FIXME: May be renamed in future. -->
-      <family>Child Fun Sans Demo</family>
+      <family>Child Fun Sans</family>
       <family>LXGW WenKai</family>
       <family>LXGW WenKai TC</family>
       <family>LXGW WenKai KR</family>
