--- a/fontconfig/.config/fontconfig/conf.d/50-generic.conf
+++ b/fontconfig/.config/fontconfig/conf.d/50-generic.conf
@@ -93,6 +93,7 @@
     <family>sans-serif</family>
     <prefer>
       <family>Andika</family>
+      <family>IBM Plex Sans</family>
       <!-- Use SC variant to use it with unknown lang like en-* zh-Hans-* and zh-cmn -->
       <family>Noto Sans CJK SC</family>
       <!-- 补全生僻字 -->
