fontconfig: use Hanyi Shufang as fangsong font
Signed-off-by: Coelacanthus <uwu@coelacanthus.name>

--- a/fontconfig/.config/fontconfig/conf.d/50-generic.conf
+++ b/fontconfig/.config/fontconfig/conf.d/50-generic.conf
@@ -57,6 +57,7 @@
   <alias binding="strong">
     <family>generic(fangsong)</family>
     <prefer>
+      <family>汉仪书仿 55S</family>
       <!-- 方正恒仿宋 GBK -->
       <family>FZHengFangSongJF</family>
       <family>方正仿宋_GB18030</family>
