fontconfig: use fangsong as cursive font
Signed-off-by: Coelacanthus <uwu@coelacanthus.name>

--- a/fontconfig/.config/fontconfig/conf.d/50-generic.conf
+++ b/fontconfig/.config/fontconfig/conf.d/50-generic.conf
@@ -29,10 +29,7 @@
   <alias binding="strong">
     <family>cursive</family>
     <prefer>
-      <family>LXGW WenKai</family>
-      <family>LXGW WenKai TC</family>
-      <family>LXGW WenKai KR</family>
-      <family>serif</family>
+      <family>generic(fangsong)</family>
     </prefer>
   </alias>
   <!-- Default fantasy fonts -->
